--- a/UpGrade/database.properties
+++ b/UpGrade/database.properties
@@ -1,3 +1,3 @@
-url = jdbc:project1.cqb6pzj3paxs.us-east-2.rds.amazonaws.com:5432/projecttrms
+url = jdbc:postgresql://project1.cqb6pzj3paxs.us-east-2.rds.amazonaws.com:5432/projecttrms
 username= rootadmin
 password = l0ckmeplease
