pushing not working JsonRequestHelper code

--- a/UpGrade/src/main/webapp/WEB-INF/web.xml
+++ b/UpGrade/src/main/webapp/WEB-INF/web.xml
@@ -1,19 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	version="2.5">
-	<display-name>UpGrade</display-name>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
-	<servlet>
-		<servlet-name>MasterServlet</servlet-name>
-		<servlet-class>com.revature.servlet.MasterServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>MasterServlet</servlet-name>
-		<url-pattern>*.change</url-pattern>
-		<url-pattern>/api/*</url-pattern>
-	</servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+  <display-name>UpGrade</display-name>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <servlet-name>MasterServlet</servlet-name>
+    <servlet-class>com.revature.servlet.MasterServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MasterServlet</servlet-name>
+    <url-pattern>*.change</url-pattern>
+    <url-pattern>/api/*</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>JSONMasterServlet</display-name>
+    <servlet-name>JSONMasterServlet</servlet-name>
+    <servlet-class>com.revature.servlet.JSONMasterServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>JSONMasterServlet</servlet-name>
+    <url-pattern>/JSONMasterServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>JSONRequestHelper</display-name>
+    <servlet-name>JSONRequestHelper</servlet-name>
+    <servlet-class>com.revature.servlet.JSONRequestHelper</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>JSONRequestHelper</servlet-name>
+    <url-pattern>/JSONRequestHelper</url-pattern>
+  </servlet-mapping>
 </web-app>
