fixing routing in employee portal

--- a/UpGrade/src/main/webapp/WEB-INF/web.xml
+++ b/UpGrade/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,14 @@
     <servlet-name>JSONMasterServlet</servlet-name>
     <url-pattern>*.json</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>RulesController</display-name>
+    <servlet-name>RulesController</servlet-name>
+    <servlet-class>com.revature.controller.RulesController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RulesController</servlet-name>
+    <url-pattern>/RulesController</url-pattern>
+  </servlet-mapping>
 </web-app>
