adding changes to reimbursement daoimpl, adding single view html and routing to employee portal, adding changes to emp portal pending reimbursements page to display database info in table

--- a/UpGrade/src/main/webapp/WEB-INF/web.xml
+++ b/UpGrade/src/main/webapp/WEB-INF/web.xml
@@ -33,4 +33,14 @@
     <servlet-name>DetailsController</servlet-name>
     <url-pattern>/DetailsController</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SingleViewController</display-name>
+    <servlet-name>SingleViewController</servlet-name>
+    <servlet-class>com.revature.controller.SingleViewController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SingleViewController</servlet-name>
+    <url-pattern>/SingleViewController</url-pattern>
+  </servlet-mapping>
 </web-app>
