--- a/UpGrade/src/main/webapp/WEB-INF/web.xml
+++ b/UpGrade/src/main/webapp/WEB-INF/web.xml
@@ -53,4 +53,34 @@
     <servlet-name>DsDhController</servlet-name>
     <url-pattern>/DsDhController</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EmpGradesController</display-name>
+    <servlet-name>EmpGradesController</servlet-name>
+    <servlet-class>com.revature.controller.EmpGradesController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EmpGradesController</servlet-name>
+    <url-pattern>/EmpGradesController</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AwardedController</display-name>
+    <servlet-name>AwardedController</servlet-name>
+    <servlet-class>com.revature.controller.AwardedController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AwardedController</servlet-name>
+    <url-pattern>/AwardedController</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SupGradesController</display-name>
+    <servlet-name>SupGradesController</servlet-name>
+    <servlet-class>com.revature.controller.SupGradesController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SupGradesController</servlet-name>
+    <url-pattern>/SupGradesController</url-pattern>
+  </servlet-mapping>
 </web-app>
